# BlackForge

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  blackforge.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
blackforge/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  models.py  output.py
blackforge/data/: __init__.py  credentials.py  endpoints.py  payloads.py
blackforge/modules/: __init__.py  argocd.py  artifact.py  base.py  github.py  gitlab.py  jenkins.py
blackforge/utils/: __init__.py  http.py  secrets.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALL.md  USAGE.md
examples/: full_cicd_chain.sh  github_org_audit.sh  jenkins_pentest.sh  python_api_usage.py
tests/: test_cli.py  test_models.py  test_secrets.py
